--- a/nbs/00_payment_providers.ipynb
+++ b/nbs/00_payment_providers.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp core"
+    "#| default_exp payment_providers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# core\n",
+    "# payment_providers\n",
     "\n",
-    "> Server & Client methods for generating and paying L402 offers."
+    "> Server methods for generating and paying L402 offers."
    ]
   },
   {
