--- a/nbs/03_utils.ipynb
+++ b/nbs/03_utils.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#|default_exp utils"
+    "#|default_exp utils\n",
+    "from l402.payment_providers import *"
    ]
   },
   {
@@ -36,13 +37,23 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "import os\n",
+    "from cdp import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94fec703",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "\n",
-    "def create_test_wallet(fund=True):\n",
-    "    import os\n",
-    "    from cdp import Cdp, Wallet\n",
+    "def create_test_wallet(fund=True, chain='base-sepolia'):\n",
     "    Cdp.configure(api_key_name=os.getenv(\"CDP_KEY_NAME\"), private_key=os.getenv(\"CDP_PRIVATE_KEY\"))\n",
     "\n",
-    "    wallet = Wallet.create('base-sepolia')\n",
+    "    wallet = Wallet.create(chain)\n",
     "    if fund:    \n",
     "        faucet_tx = wallet.faucet('usdc')\n",
     "        faucet_tx.wait()\n",
@@ -119,19 +130,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from fastapi import FastAPI"
+    "#| export\n",
+    "from fastapi import FastAPI\n",
+    "from fastapi.responses import JSONResponse\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fcd2bfa",
+   "id": "a2fe9622",
    "metadata": {},
    "outputs": [],
    "source": [
-    "app = FastAPI()\n",
+    "# #| export\n",
     "\n",
-    "server = ServerManager(app).start()"
+    "# def run_l402_server(PRClass, port=9000):\n",
+    "#     app = FastAPI()\n",
+    "\n",
+    "#     server = ServerManager(app, port=port).start()\n",
+    "\n",
+    "#     @app.get(\"/offers\")\n",
+    "#     def offers():\n",
+    "#         offers_list = [{\n",
+    "#             \"amount\": 1,\n",
+    "#             \"currency\": 'USD',\n",
+    "#             \"description\": 'Purchase 1 credit for API access',\n",
+    "#             \"offer_id\": 'xxxx',\n",
+    "#             \"payment_methods\": ['onchain'],\n",
+    "#             \"title\": '1 Credit Package',\n",
+    "#             type='one-time'\n",
+    "#         )]\n",
+    "\n",
+    "        \n",
+    "#         return JSONResponse(\n",
+    "#             content=offers_response.model_dump(),\n",
+    "#             status_code=402\n",
+    "#         )\n",
+    "\n",
+    "#     @app.post(\"/payment_request\")\n",
+    "#     async def create_payment_request(request: PRClass):\n",
+    "#         payment_request = ps.create_payment_request(**request.model_dump())\n",
+    "#         return JSONResponse(\n",
+    "#             content=payment_request,\n",
+    "#             status_code=200\n",
+    "#         )"
    ]
   }
  ],
