--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,8 +7,8 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from l402.core import *\n",
     "from l402.payment_providers import *\n",
+    "from l402.payment_clients import *\n",
     "from l402.utils import *"
    ]
   },
@@ -110,10 +110,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:     Started server process [47447]\n",
+      "INFO:     Started server process [53187]\n",
       "INFO:     Waiting for application startup.\n",
       "INFO:     Application startup complete.\n",
-      "INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)\n"
+      "INFO:     Uvicorn running on http://0.0.0.0:9000 (Press CTRL+C to quit)\n"
      ]
     }
    ],
@@ -121,7 +121,7 @@
     "# Create FastAPI app\n",
     "app = FastAPI()\n",
     "\n",
-    "server = ServerManager(app).start()"
+    "server = ServerManager(app, port=9000).start()"
    ]
   },
   {
@@ -137,7 +137,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uuid import uuid4"
+    "from uuid import uuid4\n",
+    "import json\n",
+    "import os"
    ]
   },
   {
@@ -146,15 +148,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ps = PaymentServer(\n",
-    "    payment_request_url=\"http://localhost:8000/payment_request\",\n",
-    "    onchain_provider=create_test_wallet(fund=False),\n",
-    ")"
+    "# w =create_test_wallet(fund=False, chain='base-mainnet')\n",
+    "# import json\n",
+    "# json.dump(w.export_data().to_dict(), open('index-seed.json', 'w'))\n",
+    "# !cat index-seed.json\n",
+    "Cdp.configure(api_key_name=os.getenv(\"CDP_KEY_NAME\"), private_key=os.getenv(\"CDP_PRIVATE_KEY\"))\n",
+    "\n",
+    "w = Wallet.import_data(WalletData.from_dict(json.load(open('index-seed.json'))))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('0')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w.balance('usdc')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ps = PaymentServer(\n",
+    "    payment_request_url=\"http://localhost:9000/payment_request\",\n",
+    "    onchain_provider=w,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,17 +218,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "@app.post(\"/payment_request\")\n",
     "async def create_payment_request(request: PaymentRequest):\n",
-    "    payment_request = ps.create_payment_request(**request.model_dump())\n",
-    "    return JSONResponse(\n",
-    "        content=payment_request,\n",
-    "        status_code=200\n",
-    "    )"
+    "    try:\n",
+    "        payment_request = ps.create_payment_request(**request.model_dump())\n",
+    "        return JSONResponse(\n",
+    "            content=payment_request,\n",
+    "            status_code=200\n",
+    "        )\n",
+    "    except Exception as e:\n",
+    "        print(e)"
    ]
   },
   {
@@ -202,25 +243,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w = create_test_wallet(fund=False)\n",
+    "# w = create_test_wallet(fund=False, chain='base-mainnet')\n",
+    "\n",
     "c = Client(onchain_provider=CoinbaseProvider(wallet=w))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:     127.0.0.1:50799 - \"GET /offers HTTP/1.1\" 402 Payment Required\n",
-      "INFO:     127.0.0.1:50800 - \"POST /payment_request HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:58674 - \"GET /offers HTTP/1.1\" 402 Payment Required\n",
+      "INFO:     127.0.0.1:58676 - \"POST /payment_request HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:58699 - \"GET /offers HTTP/1.1\" 402 Payment Required\n",
+      "INFO:     127.0.0.1:58701 - \"POST /payment_request HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:58703 - \"POST /payment_request HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:58706 - \"POST /payment_request HTTP/1.1\" 200 OK\n"
      ]
     },
     {
@@ -230,28 +276,28 @@
        " {'offers': [{'amount': 1,\n",
        "    'currency': 'USD',\n",
        "    'description': 'Purchase 1 credit for API access',\n",
-       "    'offer_id': '3731f7ea-b00e-4389-9370-fd6acedffd0d',\n",
+       "    'offer_id': 'aa1d77b4-568d-45c9-aa2d-5608fd7db6e7',\n",
        "    'payment_methods': ['onchain'],\n",
        "    'title': '1 Credit Package',\n",
        "    'type': 'one-time'}],\n",
-       "  'payment_context_token': '34b9a1f8-422b-44c2-8063-9109f5d42e17',\n",
-       "  'payment_request_url': 'http://localhost:8000/payment_request',\n",
+       "  'payment_context_token': '74da77bc-0ef6-4125-a592-f8154d23fe3d',\n",
+       "  'payment_request_url': 'http://localhost:9000/payment_request',\n",
        "  'version': '0.2.2'})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "r1 = httpx.get(\"http://localhost:8000/offers\")\n",
+    "r1 = httpx.get(\"http://localhost:9000/offers\")\n",
     "r1.status_code, r1.json()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
