updated all nbs

--- a/nbs/00_payment_providers.ipynb
+++ b/nbs/00_payment_providers.ipynb
@@ -60,7 +60,7 @@
     "    version:str\n",
     "    created_at:str\n",
     "\n",
-    "offers = db.create(OfferRow, name='offers', pk='offer_id')\n",
+    "offers = db.create(OfferRow, name='offers', pk='offer_id', if_not_exists=True)\n",
     "\n",
     "class PaymentRequestRow: \n",
     "    id:int\n",
@@ -72,7 +72,7 @@
     "    version:str\n",
     "    created_at:str\n",
     "\n",
-    "payment_requests = db.create(PaymentRequestRow, name='payment_requests', pk='id')\n",
+    "payment_requests = db.create(PaymentRequestRow, name='payment_requests', pk='id', if_not_exists=True)\n",
     "\n"
    ]
   },
@@ -153,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "OfferResponse(offers=[Offer(amount=1, currency='USD', description='Purchase 1 credit for API access', offer_id='offer_c668e0c0', payment_methods=['lightning'], title='1 Credit Package', type='top-up')], payment_context_token='44231f3f-b890-42b3-a8f0-a3b2cc0171b0', payment_request_url='http://localhost:8000/payment_request', version='0.2.2')"
+       "L402Response(offers=[Offer(amount=1, currency='USD', description='Purchase 1 credit for API access', offer_id='offer_c668e0c0', payment_methods=['lightning'], title='1 Credit Package', type='top-up')], payment_context_token='cb2680f1-2425-41df-9d53-5082e3f15fc1', payment_request_url='http://localhost:8000/payment_request', version='0.2.2')"
       ]
      },
      "execution_count": 5,
